exports[`test converts basic class render 1`] = `
<div
  class="basic-class class">
  <div
    class="group"
    id="group-id">
    <span>
      <strong>
        Hello!
      </strong>
    </span>
    <span
      class="empty" />
  </div>
</div>
`;

exports[`test converts basic pure render 1`] = `
<div
  class="basic-pure pure">
  <div
    class="group"
    id="group-id">
    <span>
      <strong>
        Hello!
      </strong>
    </span>
    <span
      class="empty" />
  </div>
</div>
`;

exports[`test renders the whole list 1`] = `
<ul>
  <li>
    0
  </li>
  <li>
    1
  </li>
</ul>
`;
